Use Java 17 (records) + misc refactoring